@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,140 +25,117 @@ import sun.hotspot.code.Compiler;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.io.IOException;
-import java.util.stream.Collectors;
-import java.io.OutputStream;
+import java.util.Map;
+import java.util.HashMap;
 import jdk.test.lib.apps.LingeredApp;
-import jdk.test.lib.JDKToolLauncher;
-import jdk.test.lib.Platform;
-import jdk.test.lib.process.OutputAnalyzer;
+import jtreg.SkippedException;
+import sun.hotspot.gc.GC;
 
 /**
  * @test
  * @summary Test the 'universe' command of jhsdb clhsdb.
- * @requires vm.hasSAandCanAttach & vm.gc != "Z"
+ * @requires vm.hasSAandCanAttach
  * @bug 8190307
  * @library /test/lib
  * @build jdk.test.lib.apps.*
  * @build sun.hotspot.WhiteBox
  * @run driver ClassFileInstaller sun.hotspot.WhiteBox sun.hotspot.WhiteBox$WhiteBoxPermission
- * @run main/othervm -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -Xbootclasspath/a:. TestUniverse withoutZ
- */
-
-/**
- * @test
- * @summary Test the 'universe' command of jhsdb clhsdb.
- * @requires vm.hasSAandCanAttach & vm.gc == "Z"
- * @bug 8190307
- * @library /test/lib
- * @build jdk.test.lib.apps.*
- * @build sun.hotspot.WhiteBox
- * @run driver ClassFileInstaller sun.hotspot.WhiteBox sun.hotspot.WhiteBox$WhiteBoxPermission
- * @run main/othervm -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -Xbootclasspath/a:. TestUniverse withZ
+ * @run main/othervm -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -Xbootclasspath/a:. TestUniverse
  */
 
 public class TestUniverse {
 
-    private static void testClhsdbForUniverse(long lingeredAppPid,
-                                              String gc) throws Exception {
+    private static void testClhsdbForUniverse(long lingeredAppPid, GC gc) throws Exception {
+        ClhsdbLauncher launcher = new ClhsdbLauncher();
+        List<String> cmds = List.of("universe");
+        Map<String, List<String>> expStrMap = new HashMap<>();
+        List<String> expStrings = new ArrayList<String>();
+        expStrings.add("Heap Parameters");
 
-        Process p;
-        JDKToolLauncher launcher = JDKToolLauncher.createUsingTestJDK("jhsdb");
-        launcher.addToolArg("clhsdb");
-        launcher.addToolArg("--pid");
-        launcher.addToolArg(Long.toString(lingeredAppPid));
+        switch (gc) {
+        case Serial:
+            expStrings.add("Gen 1:   old");
+            break;
 
-        ProcessBuilder pb = new ProcessBuilder();
-        pb.command(launcher.getCommand());
-        System.out.println(
-            pb.command().stream().collect(Collectors.joining(" ")));
+        case Parallel:
+            expStrings.add("ParallelScavengeHeap");
+            expStrings.add("PSYoungGen");
+            expStrings.add("eden");
+            break;
 
-        try {
-            p = pb.start();
-        } catch (Exception attachE) {
-            throw new Error("Couldn't start jhsdb or attach to LingeredApp : " + attachE);
+        case ConcMarkSweep:
+            expStrings.add("Gen 1: concurrent mark-sweep generation");
+            break;
+
+        case G1:
+            expStrings.add("garbage-first heap");
+            expStrings.add("region size");
+            expStrings.add("G1 Young Generation:");
+            expStrings.add("regions  =");
+            break;
+
+        case Epsilon:
+            expStrings.add("Epsilon heap");
+            expStrings.add("reserved");
+            expStrings.add("committed");
+            expStrings.add("used");
+            break;
+
+        case Z:
+            expStrings.add("ZHeap");
+            break;
+
+        case Shenandoah:
+            expStrings.add("Shenandoah Heap");
+            break;
         }
 
-        // Issue the 'universe' command at the clhsdb prompt.
-        OutputStream input = p.getOutputStream();
-        try {
-            input.write("universe\n".getBytes());
-            input.write("quit\n".getBytes());
-            input.flush();
-        } catch (IOException ioe) {
-            throw new Error("Problem issuing the 'universe' command ", ioe);
-        }
-
-        OutputAnalyzer output = new OutputAnalyzer(p);
-
-        try {
-            p.waitFor();
-        } catch (InterruptedException ie) {
-            p.destroyForcibly();
-            throw new Error("Problem awaiting the child process: " + ie, ie);
-        }
-        if (gc.contains("UseZGC")) {
-            output.shouldContain("ZHeap");
-        }
-
-        output.shouldHaveExitValue(0);
-        System.out.println(output.getOutput());
-
-        output.shouldContain("Heap Parameters");
-        if (gc.contains("G1GC")) {
-            output.shouldContain("garbage-first heap");
-            output.shouldContain("region size");
-            output.shouldContain("G1 Young Generation:");
-            output.shouldContain("regions  =");
-        }
-        if (gc.contains("UseConcMarkSweepGC")) {
-            output.shouldContain("Gen 1: concurrent mark-sweep generation");
-        }
-        if (gc.contains("UseSerialGC")) {
-            output.shouldContain("Gen 1:   old");
-        }
-        if (gc.contains("UseParallelGC")) {
-            output.shouldContain("ParallelScavengeHeap");
-            output.shouldContain("PSYoungGen");
-            output.shouldContain("eden");
-        }
-        if (gc.contains("UseEpsilonGC")) {
-            output.shouldContain("Epsilon heap");
-            output.shouldContain("reserved");
-            output.shouldContain("committed");
-            output.shouldContain("used");
-        }
+        expStrMap.put("universe", expStrings);
+        launcher.run(lingeredAppPid, cmds, expStrMap, null);
     }
 
-    public static void test(String gc) throws Exception {
+    private static void test(GC gc) throws Exception {
         LingeredApp app = null;
         try {
-            List<String> vmArgs = new ArrayList<String>();
-            vmArgs.add("-XX:+UnlockExperimentalVMOptions"); // unlock experimental GCs
-            vmArgs.add(gc);
-            app = LingeredApp.startApp(vmArgs);
-            System.out.println ("Started LingeredApp with the GC option " + gc +
-                                " and pid " + app.getPid());
+            app = LingeredApp.startApp(List.of("-XX:+UnlockExperimentalVMOptions", "-XX:+Use" + gc + "GC"));
+            System.out.println ("Started LingeredApp with " + gc + "GC and pid " + app.getPid());
             testClhsdbForUniverse(app.getPid(), gc);
         } finally {
             LingeredApp.stopApp(app);
         }
     }
 
+    private static boolean isSelectedAndSupported(GC gc) {
+        if (!gc.isSelected()) {
+            // Not selected
+            return false;
+        }
+
+        if (Compiler.isGraalEnabled()) {
+            if (gc == GC.ConcMarkSweep || gc == GC.Epsilon || gc == GC.Z || gc == GC.Shenandoah) {
+                // Not supported
+                System.out.println ("Skipped testing of " + gc + "GC, not supported by Graal");
+                return false;
+            }
+        }
+
+        // Selected and supported
+        return true;
+    }
 
     public static void main (String... args) throws Exception {
+        System.out.println("Starting TestUniverse");
         try {
-            test("-XX:+UseG1GC");
-            test("-XX:+UseParallelGC");
-            test("-XX:+UseSerialGC");
-            if (!Compiler.isGraalEnabled()) { // Graal does not support all GCs
-                test("-XX:+UseConcMarkSweepGC");
-                if (args[0].equals("withZ")) {
-                    test("-XX:+UseZGC");
+            for (GC gc: GC.values()) {
+                if (isSelectedAndSupported(gc)) {
+                    test(gc);
                 }
-                test("-XX:+UseEpsilonGC");
             }
+        } catch (SkippedException se) {
+            throw se;
         } catch (Exception e) {
+            System.out.println(e.getMessage());
+            e.printStackTrace();
             throw new Error("Test failed with " + e);
         }
     }
